Bug 102231 - MBIM modem failing with MaxActivatedContexts after suspend/resume cycle
Summary: MBIM modem failing with MaxActivatedContexts after suspend/resume cycle
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: 1.6
Hardware: Other All
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-15 10:39 UTC by Tore Anderson
Modified: 2017-09-13 09:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Tore Anderson 2017-08-15 10:39:29 UTC
Aleksander and I discussed this on IRC, but I'm logging a bug too to make sure it doesn't get forgotten about.

My HP lt4120 modem (in MBIM mode) will, after a suspend/resume cycle, no longer be able to connect:

[root@sloth ~]# mmcli -m 28 --simple-connect=apn=telenor.smart
error: couldn't connect the modem: 'GDBus.Error:org.freedesktop.libmbim.Error.Status.MaxActivatedContexts: MaxActivatedContexts'

The modem was in all likelihood connected when the machine was suspended (as the WWAN connection in NM has "connection.autoconnect: yes").

Even though the modem isn't connected from MM/NM's point of view, from the MBIM point of view it appears to be:

[root@sloth ~]# mbimcli -d /dev/cdc-wdm0 -p --query-connection-state
[/dev/cdc-wdm0] Connection status:
              Session ID: '0'
        Activation state: 'activated'
        Voice call state: 'none'
                 IP type: 'ipv4-and-ipv6'
            Context type: 'internet'
           Network error: 'unknown'

I can bring it back to life by using mbimcli to disconnect it:

[root@sloth ~]# mbimcli -d /dev/cdc-wdm0 -p --disconnect
[/dev/cdc-wdm0] Successfully disconnected
[/dev/cdc-wdm0] Connection status:
              Session ID: '0'
        Activation state: 'deactivated' 
        Voice call state: 'none' 
                 IP type: 'default'
            Context type: 'internet'
           Network error: 'unknown'
[root@sloth ~]# mmcli -m 28 --simple-connect=apn=telenor.smart
successfully connected the modem

It would be nice if MM gains the ability to do this on its own at suspend or resume time (or both).

Tore
Comment 1 Aleksander Morgado 2017-09-13 09:37:59 UTC
Fixed in git master and backported to mm-1-6


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.